# practice-cpp-cmake-voicevox

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp
.devcontainer/: devcontainer.json
